--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        
+        <p>We have the recipes of the following dishes:</p>
+        <ul>
+            <li><a href="./recipes/pasta.html">Greek Pasta with Tomatoes and White Beans</a></li>
+        </ul>
     </body>
 </html>
