--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <p>We have the recipes of the following dishes:</p>
         <ul>
             <li><a href="./recipes/pasta.html">Greek Pasta with Tomatoes and White Beans</a></li>
+            <li><a href="./recipes/maggi.html">Maggi</a></li>
         </ul>
     </body>
 </html>
