--- a/recipes/maggi.html
+++ b/recipes/maggi.html
@@ -12,7 +12,7 @@
         <h2>Description</h2>
         <p>A simple dish anyone can make.</p>
 
-        <h2>Ingredients></h2>
+        <h2>Ingredients</h2>
         <ul>
             <li>A packet of Maggi</li>
             <li>Magic masala</li>
