Add friedrice page link in index.html, adjust height-360 to pasta img
Created fried rice page with content and added its link to index.html.
Also reduced the height of image in pasta recipe-page from
960 pxl to 360 pxl

As the image was covering the entire page it's dimensions were reduced.

Height was reduced using the height attribute.

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,7 +7,7 @@
 
     <head>
         <h1>Greek Pasta with Tomatoes and White Beans</h1>
-        <img src="../images/pasta.jpg" alt="Pasta Image" />
+        <img src="../images/pasta.jpg" alt="Pasta Image" height="360" />
 
         <h2>Description</h2>
         <p>An easy, quick, and tasty recipe. The flavors are wonderfully different as they are combined and meld together.</p>
@@ -28,6 +28,5 @@
             <li>Add spinach to the sauce; cook for 2 minutes or until spinach wilts, stirring constantly.</li>
             <li>Serve sauce over pasta, and sprinkle with feta</li>
         </ol>
-
     </head>
 </html>
