--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/pasta.html">Greek Pasta with Tomatoes and White Beans</a></li>
             <li><a href="./recipes/maggi.html">Maggi</a></li>
+            <li><a href="./recipes/friedrice.html">Quinoa Fried Rice</a></li>
         </ul>
     </body>
 </html>
