Use dl tag in pasta, maggi recipe-pages

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -9,24 +9,32 @@
         <h1>Greek Pasta with Tomatoes and White Beans</h1>
         <img src="../images/pasta.jpg" alt="Pasta Image" height="360" />
 
-        <h2>Description</h2>
-        <p>An easy, quick, and tasty recipe. The flavors are wonderfully different as they are combined and meld together.</p>
+        <dl>
+            <dt><h2>Description</h2></dt>
+            <dd>
+                <p>An easy, quick, and tasty recipe. The flavors are wonderfully different as they are combined and meld together.</p>
+            </dd>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 (14.5 ounce) cans Italian-style diced tomatoes</li>
-            <li>1 (19 ounce) can cannellini beans, drained and rinsed</li>
-            <li>10 ounces fresh spinach, washed and chopped</li>
-            <li>8 ounces penne pasta</li>
-            <li>1/2 cup crumbled feta cheese</li>
-        </ul>
+            <dt><h2>Ingredients</h2></dt>
+            <dd>
+                <ul>
+                    <li>2 (14.5 ounce) cans Italian-style diced tomatoes</li>
+                     <li>1 (19 ounce) can cannellini beans, drained and rinsed</li>
+                    <li>10 ounces fresh spinach, washed and chopped</li>
+                    <li>8 ounces penne pasta</li>
+                    <li>1/2 cup crumbled feta cheese</li>
+                </ul>
+            </dd>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Cook the pasta in a large pot of boiling salted water until al dente.</li>
-            <li>Meanwhile, combine tomatoes and beans in a large non-stick skillet. Bring to a boil over medium high heat. Reduce heat, and simmer 10 minutes.</li>
-            <li>Add spinach to the sauce; cook for 2 minutes or until spinach wilts, stirring constantly.</li>
-            <li>Serve sauce over pasta, and sprinkle with feta</li>
-        </ol>
+            <dt><h2>Steps</h2></dt>
+            <dd>
+                <ol>
+                    <li>Cook the pasta in a large pot of boiling salted water until al dente.</li>
+                    <li>Meanwhile, combine tomatoes and beans in a large non-stick skillet. Bring to a boil over medium high heat. Reduce heat, and simmer 10 minutes.</li>
+                    <li>Add spinach to the sauce; cook for 2 minutes or until spinach wilts, stirring constantly.</li>
+                    <li>Serve sauce over pasta, and sprinkle with feta</li>
+                </ol>
+            </dd>
+        </dl>
     </head>
 </html>
