--- a/recipes/maggi.html
+++ b/recipes/maggi.html
@@ -9,23 +9,29 @@
         <h1>Maggi</h1>
         <img src="../images/maggi.jpg" alt="Maggi Image">
 
-        <h2>Description</h2>
-        <p>A simple dish anyone can make.</p>
+        <dl>
+            <dt><h2>Description</h2></dt>
+            <dd><p>A simple dish anyone can make.</p></dd>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>A packet of Maggi</li>
-            <li>Magic masala</li>
-        </ul>
+            <dt><h2>Ingredients</h2></dt>
+            <dd>
+                <ul>
+                    <li>A packet of Maggi</li>
+                    <li>Magic masala</li>
+                </ul>
+            </dd>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Boil water.</li>
-            <li>Put Magic Masala.</li>
-            <li>Put Maggi.</li>
-            <li>Wait for 2 minutes.</li>
-            <li><strong>Wait for more 2 minutes and more 2 minutes.</strong></li>
-            <li><em>Enjoy your Maggi!</em></li>
-        </ol>
+            <dt><h2>Steps</h2></dt>
+            <dd>
+                <ol>
+                    <li>Boil water.</li>
+                    <li>Put Magic Masala.</li>
+                    <li>Put Maggi.</li>
+                    <li>Wait for 2 minutes.</li>
+                    <li><strong>Wait for more 2 minutes and more 2 minutes.</strong></li>
+                    <li><em>Enjoy your Maggi!</em></li>
+                </ol>
+            </dd>
+        </dl>
     </body>
 </html>
